Fixed nav bar, indents, nests and added nav bar for contact.hmtl

--- a/contact.html
+++ b/contact.html
@@ -1,65 +1,76 @@
-
 <html>
 <head>
 <title>Contact</title>
-
+<link rel="stylesheet" href="css/contactStyle.css">
 <link href="https://fonts.googleapis.com/css?family=Baloo+Tamma" rel="stylesheet">
 
 </head>
 
-<video width="320" height="240" controls>
-    
-  <source src="http://video.nationalgeographic.com/video/news/west-mata-submarine-volcano-vin.mp4" type="video/mp4">
-    
-  <source src="http://video.nationalgeographic.com/video/news/west-mata-submarine-volcano-vin.ogg" type="video/ogg">
-Your browser does not support the video tag.
-</video>
-</div
+<body>
+  <header>
+    <div class="nav">
+     <ul>
+      <li class="home"><a href="index.html">Home</a></li>
+      <li class="about"><a href="#">About</a></li>
+      <li class="contact"><a class="active" href="#">Contact</a></li>
+     </ul>
+    </div>
+  </header>
+&nbsp;
+&nbsp;
+&nbsp;
+&nbsp;
+&nbsp;
+&nbsp;
+&nbsp;
 
 
-<p>from Mauna Kea to Kileau, volcanoes have long been known as sacred ground. keeping the area around volcanoes clean and safe for respectful visitors has been our job for over twenty years!</p>
 
- &nbsp;
-  &nbsp;
-   &nbsp;
-    &nbsp;
-     &nbsp;
+<p>Volcanoes have long been known as sacred ground. We've preserved volcanos for over twenty years!</p>
+
+&nbsp;
+&nbsp;
+&nbsp;
+&nbsp;
+&nbsp;
 
 <div class="container">  
   <form id="contact" action="" method="post">
     <h3>Sign Up For Our Newsletter</h3>
-    <fieldset>
+  &nbsp;
+  &nbsp;
+
+    <fieldset class="fieldset">
       <input placeholder="Email" type="ejliberman@gmail.com" tabindex="2" required>
     </fieldset>
-    <fieldset>
+    <fieldset class="fieldset">
       <button name="submit" type="submit" id="contact-submit" data-submit="...Sending">Submit</button>
     </fieldset>
   </form>
 
+
+
     <!-- Reddit -->
     <a href="http://reddit.com/submit?url=https://simplesharebuttons.com&amp;title=Simple Share Buttons" target="_blank">
         <img src="https://simplesharebuttons.com/images/somacro/reddit.png" alt="Reddit" />
-    </a>
+        </a>
 
      <!-- Google+ -->
     <a href="https://plus.google.com/share?url=https://simplesharebuttons.com" target="_blank">
         <img src="https://simplesharebuttons.com/images/somacro/google.png" alt="Google" />
-    </a>
+        </a>
 
     <!-- Facebook -->
     <a href="http://www.facebook.com/sharer.php?u=https://simplesharebuttons.com" target="_blank">
         <img src="https://simplesharebuttons.com/images/somacro/facebook.png" alt="Facebook" />
-    </a>
+        </a>
 
     <!-- Print -->
     <a href="javascript:;" onclick="window.print()">
         <img src="https://simplesharebuttons.com/images/somacro/print.png" alt="Print" />
-    </a>
+        </a>
 
      <!-- Twitter -->
     <a href="https://twitter.com/share?url=https://simplesharebuttons.com&amp;text=Simple%20Share%20Buttons&amp;hashtags=simplesharebuttons" target="_blank">
         <img src="https://simplesharebuttons.com/images/somacro/twitter.png" alt="Twitter" />
-    </a>
-
-
-</html>
+        </a>
