--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <body>
         <!-- Company Name Abbreviation -->
-        <div class="companyLogo">VRF Inc.</div>
+        <div class="companyLogo">VEF Inc.</div>
         <!-- Navigation Bar -->
         <header>
             <div class="nav">
@@ -23,7 +23,7 @@
             </div>
         </header>
         <!-- Company Name -->
-        <div class="subtext">Volcano Rescue Foundation Inc. Presents</div> 
+        <div class="subtext">Volcano Encouragement Foundation Inc. Presents</div> 
         <!-- Background Video -->
         <div class="fullscreen-bg">
             <video class="poster" loop muted autoplay poster="imgs/vBack.jpg" class="fullscreen-bg__video">
