--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
         <!-- Background Image -->
         <div class="img-contact background-image"></div>
         <!-- Company Logo -->
-        <div class="companyLogo">VRF Inc.</div>
+        <div class="companyLogo">VEF Inc.</div>
         <!-- Navigation Bar -->
         <header>
           <div class="nav">
