--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Contact</title>
+        <title>Contact VEF Inc.</title>
         <!-- CSS Stylesheets -->
         <link rel="stylesheet" href="css/navStyle.css">
         <link rel="stylesheet" href="css/introStyle.css">
