Interactive plus one

--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
             Save The Volcanoes Now
         </div>
         <!-- Copyrights -->
-        <footer>Collab-W1-D4&copy; 2016</footer>
-        <footer class="copyright">Video by: Paul Moon</footer>  
+        <footer>Collab-W1-D4 &copy; 2016
+        <div class="copyright">Video by: Paul Moon</div>
+        </footer>
         
     </body>
 </html>
