Two duplicate lines, changed one.

--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
                 We here at Save The Volcanoes™ want to educate the world about the awesome power of nature and teach people to respect both its descriptive capabilities and be in awe of its life bringing powers. Our goal is to bring peace and prosperity between humans and volcanoes.
             </p>
             
-            <h2>How can you help?</h2>
+            <h2>Who are we?</h2>
             <p>
                 Our employees VEF Inc. aim for perfection and always get the best results in their research. We also have a group of highly skilled individuals whose sole goal is to rescue and protect volcanoes. VEF Inc. raised awareness called "Save The Volcanoes™" and build up a new team to educate young kids and their parents about volcanoes. As a famous ice-witch once said, "Let it go" and we take this quote very seriously and strive everyday to encourage volcanoes all around the world to bust their caps and release their inner selves.
             </p>
