--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
                 Our employees VEF Inc. aim for perfection and always get the best results in their research. We also have a group of highly skilled individuals whose sole goal is to rescue and protect volcanoes. VEF Inc. raised awareness called "Save The Volcanoes™" and build up a new team to educate young kids and their parents about volcanoes. As a famous ice-witch once said, "Let it go" and we take this quote very seriously and strive everyday to encourage volcanoes all around the world to bust their caps and release their inner selves.
             </p>
             
-            <h2>How can you help</h2>
+            <h2>How can you help?</h2>
             <p>
                 We only need three things from you: Feedback, Awareness and Money or as we like to call it, "FAM™". Help us to help the world be great again. Any donation is accepted as long as it's addressed to us. Please bear in mind to also sign up to our newsletter, go to our forums and post your stories. We want to know what you think about volcanoes.
             </p>
